# polytools

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  keywords.txt  library.properties
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: github-actions.yml
examples/: polytools_array.cc  polytools_example.cc  polytools_vector.cc
examples/arduino/polytools_example/: polytools_example.ino
examples/cmake/: polytools_example.cc
include/polytools/: polytools.h
src/: polytools.h
src/polytools/: polytools.cc
tests/: polytools_test.cc
